--- a/html.html
+++ b/html.html
@@ -1,115 +1,66 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>太极页面</title>
-    <style>
-        * {
-            box-sizing: border-box;
-			margin: 0px;
-			padding: 0px;
-		}
-		body {
-			background-color: #eeeeee;
-		}
-		#content {
-			width: 400px;
-			height: 400px;
-			border-radius: 200px;
-			position: relative;
-			overflow: hidden;
-			animation: x 10s linear infinite;
-			box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 1);
-		}
-		#content>div:first-child {
-			width: 50%;
-			height: 100%;
-			position: absolute;
-			left: 0px;
-			background-color: black;
-		}
-		#content>div:nth-child(2) {
-			width: 50%;
-			height: 100%;
-			position: absolute;
-			right: 0px;
-			background-color: white;
-		}
-		#content>div:nth-child(3) {
-			width: 50%;
-			height: 50%;
-			position: absolute;
-			left: 25%;
-			border-radius: 50%;
-			background-color: black;			
-		}
-		#content>div:nth-child(4) {
-			width: 50%;
-			height: 50%;
-			position: absolute;
-			right: 25%;
-			bottom: 0;
-			border-radius: 50%;
-			background-color: white;			
-		}
-		#content>div:nth-child(5) {
-			width: 12.5%;
-			height: 12.5%;
-			position: absolute;
-			left: 43.75%;
-			top: 18.75%;
-			border-radius: 50%;
-			background-color: white;			
-		}
-		#content>div:nth-child(6) {
-			width: 12.5%;
-			height: 12.5%;
-			position: absolute;
-			right: 43.75%;
-			bottom: 18.75%;
-			border-radius: 50%;
-			background-color: black;			
-		}
-		#wrapper {
-			height: 100vh;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			flex-direction: column;
-		}
-		#footer {
-			margin-top: 1em;
-			font-size: 3em;
-		}
-
-		@keyframes x {
-			from { 
-				transform: rotate(0deg);
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>九宫格</title>
+		<style>
+			.content {
+				width: 100%;
+				height: 1000px;
+				text-align: center;
+				background-color: rgb(207, 207, 44);
 			}
-			to {
-				transform: rotate(360deg);
+			.content .row {
+				width: 100%;
+				height: 30%;
+				position: relative;
 			}
-		}
-		@media (max-width:500px) {
-			#content {
-				width: 200px;
-				height: 200px;
+			.content .row .child1 {
+				width: 30%;
+				height: 30%;
+				display: inline-block;
+				background-color: chocolate;
+				border-radius: 10px;
+				position: absolute;
+				left: 0;
 			}
-		}
-    </style>
-</head>
-<body>
-    <div id="wrapper">
-        <div id="content">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div id="footer">道可道，非常道</div>
-    </div>
-</body>
+			.content .row .child2 {
+				width: 30%;
+				height: 30%;
+				display: inline-block;
+				background-color: chocolate;
+				border-radius: 10px;
+				position: absolute;
+				left: 35%;
+			}
+			.content .row .child3 {
+				width: 30%;
+				height: 30%;
+				display: inline-block;
+				background-color: chocolate;
+				border-radius: 10px;
+				position: absolute;
+				left: 70%;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="content">
+			<div class="row">
+				<div class="child1"></div>
+				<div class="child2"></div>
+				<div class="child3"></div>
+			</div>
+			<div class="row">
+				<div class="child1"></div>
+				<div class="child2"></div>
+				<div class="child3"></div>
+			</div>
+			<div class="row">
+				<div class="child1"></div>
+				<div class="child2"></div>
+				<div class="child3"></div>
+			</div>
+		</div>
+	</body>
 </html>
