--- a/html/JD.html
+++ b/html/JD.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>JD商城</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="shortcut icon" href="favicon.png">
   </head>
   <body>
@@ -53,7 +53,7 @@
 
     <div class="topbanner">
       <div class="w tb">
-        <img src="/img/banner.png" alt=""/>
+        <img src="../img/banner.png" alt=""/>
         <a href="javascript:;" class="close-banner"></a>
       </div>
     </div>
@@ -89,10 +89,10 @@
 
     <div class="slogen">
       <ul>
-        <li><img src="img/slogen.png" alt="item1"/></li>
-        <li><img src="img/slogen.png" alt="item1"/></li>
-        <li><img src="img/slogen.png" alt="item1"/></li>
-        <li><img src="img/slogen.png" alt="item1"/></li>
+        <li><img src="../img/slogen.png" alt="item1"/></li>
+        <li><img src="../img/slogen.png" alt="item1"/></li>
+        <li><img src="../img/slogen.png" alt="item1"/></li>
+        <li><img src="../img/slogen.png" alt="item1"/></li>
       </ul>
     </div>
 
