--- a/html/JD.html
+++ b/html/JD.html
@@ -4,7 +4,7 @@
     <title>JD商城</title>
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="../favicon.png">
   </head>
   <body>
     <!--顶部导航start-->
