--- a/mission/mission1.html
+++ b/mission/mission1.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>九宫格</title>
+		<link rel="shortcut icon" href="../favicon.png">
 		<style>
 			.content {
 				background-color: #dddddd;
