--- a/Task/Day2/html.html
+++ b/Task/Day2/html.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>企业级网站</title>
+		<title>九宫格</title>
 		<style>
 
 		</style>
 	</head>
 	<body>
-
+		<script>
+			var str = "hello world ni hao ma";
+		</script>
 	</body>
 </html>
