--- a/Task/Day2/html.html
+++ b/Task/Day2/html.html
@@ -2,14 +2,53 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>九宫格</title>
+		<title>写一个方法去掉字符串中的空格</title>
 		<style>
 
 		</style>
 	</head>
 	<body>
 		<script>
-			var str = "hello world ni hao ma";
+			var str = " hello world ni hao ma ";
+			const POSITION = Object.freeze({
+				left: Symbol(),
+				right: Symbol(),
+				both: Symbol(),
+				center: Symbol(),
+				all: Symbol(),
+			});
+			function trim(str, position = POSITION.both)
+			{
+				if(!!POSITION[position])
+				{
+					throw new Error("unexpected position value");
+				}
+				switch(position)
+				{
+					case POSITION.left:
+						str = str.replace(/^\s+/,'');
+						break;
+					case POSITION.right:
+						str = str.replace(/\s+$/,'');
+						break;
+					case POSITION.both:
+						str = str.replace(/^\s+/,'').replace(/\s+$/,'');
+						break;
+					case POSITION.center:
+						while(str.match(/\w\s+\w/))
+						{
+							str = str.replace(/(\w)(\s+)(\w)/,'$1$3');			
+						}
+						break;
+					case POSITION.all:
+						str = str.replace(/\s/g,'');
+						break;
+					default:					
+				}
+				return str;
+			}
+			var result = trim(str, POSITION.left);
+			console.log(`|${result}|`);
 		</script>
 	</body>
 </html>
