--- a/Task/Day14/html.html
+++ b/Task/Day14/html.html
@@ -24,6 +24,8 @@
 			
 			注：SGML 是通用标记语言的集合。其中有 HTML、XML，因此需要用 DTD 来指定使用那种规范。
 		</div>
+		<label for="tel">电话：</label>
+		<input type="text", value="15616165", name="tel">
 		<div class="content">
 			<div class="child">hello world!</div>
 		</div>
