--- a/Task/Day14/html.html
+++ b/Task/Day14/html.html
@@ -34,10 +34,15 @@
 			}
 
 			main {
+				position: absolute;
 				margin-top: 50px;
 				margin-bottom: 34px;
-				height: 2000px;
+				overflow-y: scroll;
 				background-color:khaki;
+				-webkit-overflow-scrolling: touch;
+			}
+			main .content {
+				height: 2000px;
 			}
 		</style>
 	</head>
@@ -47,7 +52,7 @@
 		</header>
 		
 		<main>
-			<div>
+			<div class="content">
 				<h2>为什么HTML5只需要写<!DOCTYPE HTML>就可以</h2>
 				因为 HTML5 与 HTML4 基于的基准不同。HTML4 基于 SGML 因此需要除了 DOCTYPE 外还需要引入 DTD 来告诉浏览器用什么标准进行渲染。DTD 还分为标准模式、严格模式。如果什么都不写，就完全让浏览器自我发挥，会变成怪异模式。
 	
