--- a/html.html
+++ b/html.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>节流</title>
+    <meta charset="UTF-8">
+    <title>shadow-dom</title>
+    <style>
+        h1, p {
+            color: #db73ff !important;
+        }
+        #host {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
+  <div id="host">
+      <h1 class="title">I am title</h1>
+      <p class="subtitle">I am subtitle</p>
+  </div>
 
-  <button id="throttle">点我节流！</button>
+  <template id="temp">
+      <style>
+          span {
+              color: red;
+          }
+          ::content * {
+            z-index: 10;
+              background-color: #60d9ff;
+          }
+          :host {
+              border: 10px solid #14ff1a;
+          }
+      </style>
+      <p onclick="alert('hello~');" pseudo="test">template - 点我吧~~</p>
+      <span>I'm the span tag of template</span>
+      <!-- 绑定#host所有内容 -->
+      <!--<content></content>-->
 
-  <script>
-    window.onload = function() {
-      // 1、获取按钮，绑定点击事件
-      var myThrottle = document.getElementById("throttle");
-      myThrottle.addEventListener("click", throttle(sayThrottle));
-    }
+      <!-- 绑定#host p的内容 -->
+      <content select=".subtitle">deas</content>
+      <!-- 绑定#host h1的内容 -->
+      <content select="h1">des</content>
+  </template>
+<script>
+    var host = document.querySelector('#host');
+    var root = host.attachShadow({mode:"open"});
+    var temp = document.querySelector('#temp');
+    var clone = document.importNode(temp.content, true);
 
-    // 2、节流函数体
-    function throttle(fn) {
-      // 4、通过闭包保存一个标记
-      let canRun = true;
-      return function() {
-        // 5、在函数开头判断标志是否为 true，不为 true 则中断函数
-        if(!canRun) {
-          return;
-        }
-        // 6、将 canRun 设置为 false，防止执行之前再被执行
-        canRun = false;
-        // 7、定时器
-        setTimeout( () => {
-          fn.call(this, arguments);
-          // 8、执行完事件（比如调用完接口）之后，重新将这个标志设置为 true
-          canRun = true;
-        }, 1000);
-      };
-    }
+    root.appendChild(clone);
+    document.addEventListener('click', function(e) {
 
-    // 3、需要节流的事件
-    function sayThrottle() {
-      console.log("节流成功！");
-    }
-
-  </script>
+        console.log(e.target.innerHTML + ' click!');
+    });
+</script>
 </body>
-</html>
