--- a/Task/Day62/html.html
+++ b/Task/Day62/html.html
@@ -53,52 +53,25 @@
 			</script>
 		</div>
 		<div class="day-css">
-			<h2>怎样把一个div居中？怎样把一个浮动元素居中？怎样把绝对定位的div居中 </h2>
-			<div style="width: 100%;background-color: gray;text-align: center;">
-				<div style="margin: 0 auto;background-color: indigo;">hello world</div>
-			</div>
-
-			假定是水平居中
-			div居中：
-			margin:0 auto;
-			浮动元素居中(div居中也可以用)：
-			margin-left: 50%; transform: translate(-50%);
-			绝对定位的div居中：
-			{ top:0; left:0; bottom:0; right:0; margin: auto; }
+			<h2>手动写动画最小时间间隔是多少，为什么</h2>
+			一般浏览器的刷新频率为每秒60次，所以最小事件间隔为 1/60*1000 约 16.7ms
 		</div>
 		<div class="day-js">
 			<h2>写一个方法获取图片的原始宽高</h2>
-			<script>
-				function loadImageAsync(url) {
-					return new Promise(function(resolve, reject) {
-						var image = new Image();
-			
-						image.onload = function() {
-							var obj = {
-								w: image.naturalWidth,
-								h: image.naturalHeight
-							}
-							resolve(obj);
-						};
-			
-						image.onerror = function() {
-							reject(new Error('Could not load image at ' + url));
-						};
-						image.src = url;
-					});
-				}
-				var imagePromise = loadImageAsync("./22021589.png");
-				imagePromise.then(function(obj){
-					console.log(obj.w, obj.h);
-				});
-			</script>
+			主要解决了单线程的问题 由于js执行环境是单线程 所以当处理cpu密集型问题时就没办法了 这时候就可以使用webwork开启一个子线程进行处理
 		</div>
 		<div class="day-skill">
-			<h2>知道IPV6是什么吗？说说它和IPV4的区别是什么</h2>
-			ipv6增加了海量的网络地址，使物联网成为可能。
-			ipv4提供的2的32次方的地址根本不够无数的家用设备使用。
-			而2的128次方的地址可为飞速增加的物联网设备提供足够的地址。
-			如今到来的5G时代，ipv6在底层上可谓功不可没。
+			<h2>说说你对同构和SSR的理解</h2>
+			Isomorphism, 同构，指一套代码既可以在server端工作，也可以在web 客户端运行，可以无缝在server端和client端渲染两种模式间切换。这个概念由airbnb的Rendr发扬光大。
+			所以一楼说的其实指的并不是同构JS，而是Universal Javascript.
+			
+			在PWA 大行其道的环境下，因为爬虫需要和框架初始化容易白屏等等问题，服务端渲染的呼声又物论沸腾。SSR其实就是在server端把需要的页面和数据组装起来发给客户端而已。
+			
+			SSR的好处(服务端渲染)https://www.jianshu.com/p/10b6074d772c
+			
+			SEO友好
+			首页加载更快
+			减少请求
 		</div>
 	</body>
 </html>
