--- a/Task/Day75/html.html
+++ b/Task/Day75/html.html
@@ -10,31 +10,23 @@
 	<body>
 		<div class="day-html">
 			<h2>移动web页面如何自动探测电话号码</h2>
-			link
-			visited
-			hover
-			active
-			简称 LV HAO -- lv 好
+			<meta name="format-detection" content="telephone=yes">
 		</div>
 		<div class="day-css">
-			<h2>说说你对!important的理解，一般在哪些场景使用</h2>
-			!important 可以让样式的特指度最高，覆盖任何样式，而且本身不可被覆盖。
-			一般场景就是用来强制覆盖其他样式，用的比较少，不建议使用，因为别人没法覆盖这个样式，维护性比较。
+			<h2>请你解释下什么是浮动和它的工作原理是什么？同时浮动会引起什么问题</h2>
+			什么是浮动：我们在做布局的时候用到的一种技术，通过浮动可以让元素左右浮动，然后通过margin调整位置
+			工作原理：使元素脱离文档流，让元素可以左右浮动，直到遇到另一个浮动元素的边缘才停止。
+			带来的问题：浮动元素会造成父级元素无法自动获取高度，导致父级塌陷，布局错乱。
 		</div>
 		<div class="day-js">
-			<h2>写一个方法随机生成指定位数的字符串</h2>
-			<script>
-				function getRandomString (length) 
-				{
-					let str = Math.random().toString(36).substr(2)//产生数字和字母的组合
-					if (str.length >= length) {
-						return str.substr(0, length)
-					}
-					str += getRandomString(length - str.length)
-					return str
-				}
-				console.log(getRandomString(10));
-			</script>
+			<h2>js中=、==、===三个的区别是什么？并说明它们各自的工作过程</h2>
+			= 是 赋值操作符。执行顺序是从右到左， 比如 a = b = c，先执行 b = c，再执行 a = b。结合其它算术运算符就是复合赋值运算符比如： +=，-=，*=。a += b 等价于 a = a + b，其它复合赋值运算符类似。
+
+			== 在 js 中叫 不严格等于。和其它语言不一样，其它语言比如 java 中的 == 和 js 中的 === 更像。js 中的 == 也是用来比较左右操作数是否相等，但是它在比较时会自动进行类型转换，不严格。举个例子 '' == false 返回的结果是 true，左右都被转换成数字进行比较 Number('') 和 Number(false) 都返回 0，所以相等。
+			
+			=== 在 js 中叫 严格等于。没什么可说的，就是严格比较左右两个操作数的相等性，0 === false 结果是 false。
+			
+			建议：平时编码应该尽量使用 === 而不是 == 避免因为自动类型转换带来的逻辑 bug
 		</div>
 		<div class="day-skill">
 			<h2>你知道二维码的原理是什么吗？要把android和ios的下载地址合成一个二维码怎么做呢</h2>
