--- a/Task/Day82/html.html
+++ b/Task/Day82/html.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta content="yes" name="apple-mobile-web-app-capable">
+        <meta content="black" name="apple-mobile-web-app-status-bar-style">
+        <meta content="telephone=no" name="format-detection">
+        <meta content="email=no" name="format-detection">
 		<title>第82天</title>
 		<script src="../../lib/jQuery JavaScript Library v3.4.1.js"></script>
 		<script src="./shake.js"></script>
