--- a/Task/Day83/html.html
+++ b/Task/Day83/html.html
@@ -3,23 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta content="yes" name="apple-mobile-web-app-capable">
-        <meta content="black" name="apple-mobile-web-app-status-bar-style">
-        <meta content="telephone=no" name="format-detection">
-        <meta content="email=no" name="format-detection">
-		<title>第82天</title>
-		<script src="../../lib/jQuery JavaScript Library v3.4.1.js"></script>
-		<script src="./shake.js"></script>
+		<title>第83天</title>
 		<style>
 
 		</style>
 	</head>
 	<body>
 		<div class="day-html">
-			<h2>用HTML5实现手机摇一摇功能你有做过吗？你知道它的原理吗</h2>
-			<p>用力摇一摇你手机:<span id="numberCount">0</span></p>
-			<audio style="display:hiden" id="musicBox" preload="metadata" controls src="./5018.mp3" autoplay="false">
-			</audio>
+			<h2>在新窗口打开链接的方法是什么？那怎么设置全站链接都在新窗口打开</h2>
+
 		</div>
 		<div class="day-css">
 			<h2>写出你遇到过IE6/7/8/9的BUG及解决方法</h2>
