--- a/Task/Day83/html.html
+++ b/Task/Day83/html.html
@@ -11,68 +11,38 @@
 	<body>
 		<div class="day-html">
 			<h2>在新窗口打开链接的方法是什么？那怎么设置全站链接都在新窗口打开</h2>
-
+			1.a标签的target属性
+			2.在head标签下 加上			
+			<base target="_blank">
 		</div>
 		<div class="day-css">
-			<h2>写出你遇到过IE6/7/8/9的BUG及解决方法</h2>
-			兼容性问题
-			1.IE6margin双边距问题
-			2.IE67 li间隙问题
-			3.图片间隙问题——vertical-align：top
-			4.ie6下高度小于19px处理成19px；font-size:0;或者overflow：hidden
-			5.ie8以下滤镜问题，filter:alpha(opacity=50)
-			6.IE6 position:fixed 不兼容，fixed定位ie6兼容，js处理，通过获取滚动高度，赋值给需要固定的元素，设置绝对定位，设置top
-			7.ie6下父级的overflow：hidden是保不住子级的相对定位的（relative）-解决，给父级加定位
-			8.ie6下，绝对定位的父级，宽高是奇数的话，定位偏移会出现1px的偏差
-			9.ie6下，内容会撑开设置好的宽度
-			10.ie6，7 3px问题
-			11.<p><h3></h3></p>会把p元素分割成两个，原因，嵌套的规范性，p需要嵌套inline元素
-			12.在ie6下，1px dotted #000 不兼容。精度问题，可以用背景平铺
-			13.ie6下margin传递需要触发haslayout，父级有边框时，子元素margin值消失，解决办法，触发父级haslayout
-			14.ie6下当一行子元素占有的宽度之和与父级的宽度相差超过3px或者有不满行状态的时候，最后一行子元素的下margin就会失效
-			15.ie6下的文字溢出bug 条件1，子元素的宽度和父级的宽度相差小于3px的时候，2，两个浮动元素中间有注释或内联元素——解决办法：用div吧注释或内联元素包裹起来
-			16.ie6下，当浮动元素和绝对定位元素是并列关系的时候，绝对定位会消失，解决办法：给定位元素外面包裹div
-			17.ie6，7下，输入类型的表单控件上下各有1px的间隙——解决办法：给input加浮动
-			18.ie6，7下，输入类型的表单控件加border：none无效，还是会出现边框——解决办法：1，给border：0；2，重置input的背景
-			19.ie6，7下，输入类型的表单控件输入文字的时候，背景图片会跟随移动——解决办法：把背景加给父级
-			20.处理ie6 png图片兼容问题js插件，DD_belatedPNG.js,也可以用CSS滤镜处理
-			a.css处理
-			b.微软behavior扩展，下载iepngfix.htc
-			c.js插件
-			21.css hack \9——IE10之前的浏览器解析，+，*——IE7包括IE7之前的浏览器解析， _ ——IE6包括IE6之前的IE浏览器
-			22.important兼容问题，在IE6下，在important后面加一条同样的样式，会破坏important优先级作用，按照默认的优先级顺序来走
-			23.IE6 margin负值不兼容，处理，只要position：relative；这个解决方案在圣杯布局中有出现。圣杯布局，可以用position：absolute；来定位
+			<h2>IE(6/7/8/9/10/11/Edge)下的hack写法分别有哪些</h2>
+			http://www.360doc.com/content/11/0701/14/6804692_130805017.shtml
 		</div>
 		<div class="day-js">
-			<h2>用js实现一个九九乘法口诀表</h2>
-			<script>
-				function row(num) 
-				{
-					const numMap = {
-						1: '一',
-						2: '二',
-						3: '三',
-						4: '四',
-						5: '五',
-						6: '六',
-						7: '七',
-						8: '八',
-						9: '九'
-					}
+			<h2>举例说明js如何实现继承</h2>
+			JavaScript 使用基于原型链的继承。访问一个对象的属性时若该属性在对象上不存在，则会沿原型链向下搜寻每个原型对象。
 
-					return new Array(num).fill(0).map((val, idx) => {
-						const n = idx + 1
-						const res = n * num	//
-						const resStr = res > 9 ? numMap[String(res)[0]] + '十' + (numMap[String(res)[1]] || '') : numMap[res]
-						return `${numMap[n]}${numMap[num]}${res < 10 ? '得' : ''}${resStr}`
-					}).join('\t')
-				}
-				const table = new Array(9).fill(0).map((val, idx) => row(idx + 1)).join('\n')
-				console.log(table)
-			</script>
+			每个构造器都拥有 prototype 属性，代表该构造器的原型对象，初始为一个 Object 实例。所有用此构造器 new 出的对象都可以访问该对象的属性。
+			
+			function Foo(bar) { this.bar = bar }
+			Foo.prototype.baz = 'test'
+			let qux = new Foo('hello')
+			qux.bar // => 对象本身的属性：'hello'
+			qux.baz // => 对象原型链上 Foo 的原型属性：'test'
+			// qux 的原型链：(qux ->) Foo.prototype -> Object.prototype
+			如果一个构造器 A 的 prototype 属性是另一个构造器 B 的实例，那么 B 的原型链会被接到 A 上，此时我们就说 A 继承了 B，A 实例可以访问所有 B 原型链上的属性。
+			
+			function Foo2() {}
+			Foo2.prototype.baz2 ='test2'
+			Foo2.prototype = new Foo() // 将 Foo 的原型链接到 Foo2 上。Foo 来自上一个例子
+			qux = new Foo2()
+			qux.baz // 原型链上 Foo 的原型属性：'test'
+			qux.baz2 // 原型链上 Foo2 的原型属性：'test2'
+			// qux 的原型链：(qux ->) Foo2.prototype -> Foo.prototype -> Object.prototype
 		</div>
 		<div class="day-skill">
-			<h2>你知道什么是websocket吗？它有什么应用场景</h2>
+			<h2>你会抓https和移动端的包吗？分别描述下这两种包要怎么抓</h2>
 			1.社交订阅
 			2.多玩家游戏
 			3.协同合作
