--- a/Task/Day85/html.html
+++ b/Task/Day85/html.html
@@ -24,17 +24,16 @@
 			而body{height: 100vh}直接把高度设置成了视口高度，与html大小无关，所以只在body设置vh是可行的。
 		</div>
 		<div class="day-js">
-			<h2>请描述你对浏览器同源策略的理解</h2>
-			同源策略是指，某个页面上执行的 AJAX/Fetch 请求只能访问到同域名下的 URL。
-			这是出于安全性考虑，然而在某些需要跨域的场景中，
-			通过在服务端设置 CORS 响应头 Access-Control-Allow-Origin（允许的来源域名）、
-			Access-Control-Allow-Method（允许的 HTTP Method）等，可以响应来自其他域的请求。
-			协议相同
-			端口相同
-			域名相同
+			<h2>js延迟加载的方式有哪些？</h2>
+			defer 属性
+			async 属性
+			动态创建DOM方式
+			使用jQuery的getScript方法
+			使用setTimeout延迟方法
+			让JS最后加载
 		</div>
 		<div class="day-skill">
-			<h2>刷新和强制刷新有什么区别？说说你对两者的理解</h2>
+			<h2>你平时开发是用mac还是windows系统？至少举三个例子说明两者的区别</h2>
 			刷新: 若页面之前访问过,可以读取缓存的内容
 			强制刷新: 当前页面不读取缓存的内容,所有的内容必须从服务器获取
 		</div>
