--- a/Task/Day88/html.html
+++ b/Task/Day88/html.html
@@ -43,36 +43,28 @@
 			</script>			
 		</div>
 		<div class="day-css">
-			<h2>写出几个初始化CSS的样式，并解释说明为什么要这样写</h2>
-			引用css初始化库，如；
-			normalize.css
-			
-			因为浏览器的兼容问题，不同浏览器对有些标签的默认值是不同的，如果没对CSS初始化往往会出现浏览器之间的页面显示差异
-			2.初始化CSS样式可以提高编码质量，保持代码的统一性，如果不初始化，重复的CSS样式很多。
+			<h2>说说你对CSS样式覆盖规则的理解</h2>
+			首先看权重，权重高的样式会覆盖权重低大的样式。
+			!important > #id > .class > tag > *
+			同等权重时，css 靠后的覆盖靠前的（就近原则），只与 css 书写的顺序有关，与 class 引用的顺序无关
+			行内样式 > 内联样式 > 外联样式
 		</div>
 		<div class="day-js">
-			<h2>请写一个sleep（暂停）函数</h2>
-			不要写同步的暂停函数。它会让你的程序卡死。
-			写一个异步的暂停函数，这样可以在任何 async function 中暂停，且只暂停这一部分代码。
-			<script type="text/TypeScript">
-				function sleep(milliseconds: number) {
-					return new Promise<void>(resolve =>
-						setTimeout(resolve, milliseconds))
+			<h2>判断instanceof的结果并解释原因</h2>
+			<script>
+				 function test(){ 
+					return test; //这里返回的值作为new的实例，为function
 				}
-				void async function main() {
-					// … do something …
-					await sleep(5000)
-					// … do something else …
-				}()
+				var temp = new test();
+				console.log(temp);	//原型链是function->Object->null
+				console.log(temp instanceof test);	//这里的test是作为一个类型,原型链是Obejct->null
 			</script>
+			会判断原型链上的所有符合的类型
 		</div>
 		<div class="day-skill">
-			<h2>Git的reset和revert有什么区别？它们分别适用于什么场景</h2>
-			git reset的作用是修改HEAD的位置，即将HEAD指向的位置改变为之前存在的某个版本
-			如果想恢复到之前某个提交的版本，且那个版本之后提交的版本我们都不要了，就可以用这种方法
-			
-			git revert的作用通过反做创建一个新的版本
-			如果我们想恢复之前的某一版本（该版本不是merge类型），但是又想保留该目标版本后面的版本，记录下这整个版本变动流程，就可以用这种方法。（摘自博客）
+			<h2>说说你对hosts文件的理解，它都有哪些作用</h2>
+			hosts 文件可以将名称映射到 IP 地址。
+			在本机上所有对这个名称的访问相当于对它被映射到的 IP 地址的访问。可以说它起到了简易的本地 DNS 的作用。
 		</div>
 	</body>
 </html>
