--- a/Task/Day95/html.html
+++ b/Task/Day95/html.html
@@ -62,10 +62,12 @@
 			</script>
 		</div>
 		<div class="day-skill">
-			<h2>说说你对emoji表情的理解，前端如何处理emoji表情？它的运用场景有哪些</h2>
-			emoji表情实际上就是Unicode字符，通过各个系统的底层将其转化为对应的表情图像；因此，每个系统的emoji表情实现都可以各不相同。
+			<h2>你知道什么是图片防盗链吗？防盗链怎么实现呢？说说你的方法</h2>
+			盗链 是指在自己的页面上展示一些并不在自己服务器上的内容。通常的做法是通过技术手段获得它人服务器上的资源地址，绕过别人的资源展示页面，直接在自己的页面上向最终用户提供此内容。
 
-			至于应用场景，虽然是字符，但由于图像化，所以表达的意思更加丰富，多用于聊天或网络社交，言简意赅。
+			防盗链 就是防止盗链。
+			
+			在 http 协议中，如果从一个页面跳到另一个页面，header 字段里面会带个 Referer。图片服务器通过检测 Referer 是否来自规定域名，来进行防盗链。
 		</div>
 	</body>
 </html>
