--- a/CSSLearn/App/index.html
+++ b/CSSLearn/App/index.html
@@ -26,12 +26,12 @@
     </div>
     <script src="js/app.js"></script>
     <script>
-        var _hmt = _hmt || []
+        var _hmt = _hmt || [];
         (function() {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?8c03a09bd38333f581ded196287347b6";
-            var s = document.getElementsByName("script")[0];
-            s.parentNode.insertBefore(hm, s);
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?05a2292a20feb9a025e938bb43a25810";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
         })();
     </script>
 </body>
