--- a/CSSLearn/2.Card/index.html
+++ b/CSSLearn/2.Card/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="card-container">
         <div class="image-wrapper">
-            <img src="images/image01.jpg" alt="背景">
+            <img src="image/image01.jpg" alt="背景">
         </div>
         <div class="title-wrapper">
             <h1 class="title">才方便发</h1>
