--- a/CSSLearn/App/index.html
+++ b/CSSLearn/App/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1576261_5ykx69n9ocw.css">
     <script src="js/vue.js"></script>
+    <script src="js/hm.js"></script>
     <title>CSSLearn</title>
 </head>
 <body>
@@ -25,14 +26,5 @@
         </div>
     </div>
     <script src="js/app.js"></script>
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = "https://hm.baidu.com/hm.js?05a2292a20feb9a025e938bb43a25810";
-          var s = document.getElementsByTagName("script")[0]; 
-          s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
 </body>
 </html>
