--- a/CSSLearn/App/index.html
+++ b/CSSLearn/App/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1576261_5ykx69n9ocw.css">
     <script src="js/vue.js"></script>
